# rs-capture

./: .gitattributes  .gitignore  Cargo.toml  README.md  README.zh-CN.md  index.d.ts  index.js  index.mjs  package-lock.json  package.json  pnpm-lock.yaml  server_webrtc.js  server_ws.js  test_sck_backend.js
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
examples/: .env  package.json  server_webrtc.js  server_ws.js  test_sck_backend.js  test_screenshot.js
examples/public/: decoder-worker.js  index.html  webrtc-worker.js  webrtc.html
public/: index.html  webrtc.html
scripts/: create-npm.js
src/: lib.rs  scap.rs  sck.rs
src/backend/: dxgi.rs  macos.rs  mod.rs  windows.rs  xcap.rs
