
[package]
edition = "2021"
license = "MIT"
name    = "rs_capture"
version = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
image  = "0.25.9"
xcap   = "0.8.1"

  [dependencies.napi]
  features = ["napi4", "async", "compat-mode"]
  version  = "3.0.0"

  [dependencies.napi-derive]
  default-features = false
  features         = ["type-def"]
  version          = "3.0.0"

  [dependencies.tokio]
  features = ["full"]
  version  = "1.49.0"

[target."cfg(target_os = \"macos\")".dependencies]
block2                   = "0.6.2"
core-graphics            = "0.24"
objc2                    = "0.6.3"
objc2-core-graphics      = "0.3.2"
objc2-core-media         = "0.3.2"
objc2-core-video         = "0.3.2"
objc2-foundation         = "0.3.2"
objc2-screen-capture-kit = "0.3.2"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies.napi-build]
version = "2.2.2"

[profile.release]
lto   = true
strip = "symbols"
